# AI-Digest-Paper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  todo
src/paper_digest/: config.py  main.py
src/paper_digest/api/: app.py  models.py  run_store.py  runner.py
src/paper_digest/graph/: build_graph.py  schemas.py  state.py
src/paper_digest/graph/nodes/: assemble.py  fetch.py  fetch_full_text_topk.py  filter.py  persist.py  rank.py  summarize.py
src/paper_digest_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
